deploy/manifests/openshift/task-manager.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql-15-c9s
  name: postgresql-15-c9s
spec:
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    deployment: postgresql-15-c9s
  sessionAffinity: None
  type: ClusterIP

...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgresql-15-c9s
  name: postgresql-15-c9s
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: postgresql-15-c9s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: postgresql-15-c9s
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: user
        - name: POSTGRESQL_PASSWORD
          value: pass
        - name: POSTGRESQL_DATABASE
          value: db
        image: quay.io/sclorg/postgresql-15-c9s
        imagePullPolicy: IfNotPresent
        name: postgresql-15-c9s
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

...

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task-manager
  name: task-manager
spec:
  ports:
  - name: 9090-tcp
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    deployment: task-manager
  sessionAffinity: None
  type: ClusterIP

...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task-manager
  name: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: task-manager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: task-manager
    spec:
      containers:
      - env:
        - name: POSTGRESQL_DATABASE_HOST
          value: postgresql-15-c9s
        - name: POSTGRESQL_DATABASE
          value: db
        - name: POSTGRESQL_USER
          value: user
        - name: POSTGRESQL_PASSWORD
          value: pass
        image: quay.io/rywillia/task-manager
        imagePullPolicy: IfNotPresent
        name: task-manager
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

...

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: task-manager
  name: task-manager
spec:
  port:
    targetPort: 9090-tcp
  to:
    kind: Service
    name: task-manager
    weight: 100
  wildcardPolicy: None
